# geany-plugins

./: Makefile.am  configure.ac
tagfilter/: AUTHORS  Makefile.am  README
tagfilter/src/: Makefile.am  tagfilter-plugin.c
